# ask-data-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
agent/: graph.py  state.py
agent/nodes/: act.py  analyze.py  attribute.py  check.py  clarify.py  degrade.py  escalate.py  predict.py  reason.py  reflect.py  understand.py
api/: dependencies.py  main.py  ws.py
api/middleware/: auth.py
api/routes/: chat.py  report.py
config/: config.yaml
connectors/dw/: base.py  duckdb.py
connectors/llm/: base.py  deepseek.py  glm.py  qwen.py
data/: eval_100_report.json  rag_recall_report.json  resume_review_text.txt
data/sessions/: 0b5b0389.json  1d43e8f6.json  4d9eeffc.json  a2d5b758.json  b89d79dc.json  eeba120d.json  followup_test.json  multi_test.json  test-001.json
docs/: ai-agent-interview-qa.md  architecture.md  graph-diagram.md  resume-project.md
evaluator/: judge.py  rules.py
evaluator/gates/: output_eval.py  result_eval.py  sql_eval.py
memory/: context.py  session.py
monitoring/: logger.py  metrics.py  tracer.py
prompts/: manager.py
prompts/config/: prompt_config.yaml
prompts/templates/: analyze.j2  attribute.j2  check.j2  clarify.j2  degrade.j2  evaluator_judge.j2  predict.j2  reason.j2  reflect.j2  report_assemble.j2  report_plan.j2  understand.j2
rag/: embedding.py  router.py
rag/knowledge/: analytics_kb.py  business_kb.py  eval_kb.py  (+2 more)
report/: assembler.py  planner.py  renderer.py
scripts/: setup_data.py  start_backend.py  verify_e2e.py
tests/: eval_100.py  eval_rag_recall.py  run_100.py
web/: package-lock.json  package.json  vite.config.ts
(+34 files in other folders)
