[project]
name = "ask-data-agent"
version = "0.1.0"
description = "Self-correcting data analysis agent with Olist e-commerce dataset"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "langgraph>=0.2.0",
    "duckdb>=1.0.0",
    "chromadb>=0.5.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "reportlab>=4.1.0",
    "openpyxl>=3.1.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["."]

[tool.pytest.ini_options.markers]
unit = "Unit tests — no external dependencies, CI gate"
integration = "Integration tests — need DuckDB/Redis"
slow = "Slow tests — not on every commit"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "evaluator*", "rag*", "prompts*", "memory*", "connectors*", "report*", "api*"]
exclude = ["data*", "config*", "scripts*", "tests*"]

[tool.coverage.run]
source = ["agent", "evaluator", "rag", "prompts", "memory", "connectors", "report"]
omit = ["tests/*", "web/*"]
